--- a/config/home.yml
+++ b/config/home.yml
@@ -57,12 +57,7 @@
 
     - size: small
       widgets:
-        - type: weather
-          location: London, United Kingdom
-          units: metric # alternatively "imperial"
-          hour-format: 12h # alternatively "24h"
-          # Optionally hide the location from being displayed in the widget
-          # hide-location: true
+        - type: to-do
 
         - type: markets
           markets:
